add placeholder page and more stuff to index

--- a/index.html
+++ b/index.html
@@ -13,32 +13,26 @@
 </head>
 <body>
 <div class="header">
-	<ul class="nav0">
-		<li id="cat0" class="nav_item"><a href="/index.html">PLACEHOLDER</a></li>
-		<li id="cat1" class="nav_item"><a href="/index.html">HOLDPLACER</a></li>
-		<li id="cat2" class="nav_item"><a href="/index.html">PLALDHOCER</a></li>
-		<li id="cat3" class="nav_item"><a href="/index.html">HOLCEPLADER</a></li>
+	<ul class="home">
+		<li id="cat0" class="home_btn"><a href="index.html">KYTONIEMI.TECH</a></li>
 	</ul>
-</div>
+	<ul class="nav0">
+		<li id="cat0" class="nav_item"><a href="placeholder.html">PLACEHOLDER</a></li>
+		<li id="cat1" class="nav_item"><a href="placeholder.html">HOLDPLACER</a></li>
+		<li id="cat2" class="nav_item"><a href="placeholder.html">PLALDHOCER</a></li>
+		<li id="cat3" class="nav_item"><a href="placeholder.html">HOLCEPLADER</a></li>
+	</ul>
+</div><br>
 <div class="content" id="post0">
-	<h1 class="headline">Professional website of Kytis</h1>
-	<p class="bodytext">Still under construction. Please come back at a later date.<br>
-	(or don't, I don't mind)</p>
+	<h1 class="headline">Welcome to my web page.</h1>
+	<p class="bodytext">Still under construction. Do come back at a later date.<br>(or don't, I don't mind)</p>
+	<p class="bodytext">The font used in this web page doesn't seem to work on<br>mobile devices. This will be fixed soon</p>
 	<br>
 	<img class="postimg" src="le_funny_maymay.jpg" alt="wholesome 100 reddit 100 keanu 100 chungus 100" width="300" height="300">
 </div>
 <div class="footer">
-<!--
-I actually do not care whether you build your own website or
-use prebuilt ones like Wix and Wordpress. Your content is the
-only thing that matters. What I do encourage is to try out
-new things, and because you've found this message """hidden"""
-in my website, why don't you start by learning how to write
-HTML and CSS? Maybe even throw some JavaScript in the mix.
-Thank you for reading my ramblings.
-- Joona Kytöniemi 2020-09-04 at 8.26 pm haha at using two different time formats
--->
-	<p class="info">Copyright Joona Kytöniemi 2020. Last edited: 2020-09-04 8.23 pm</p>
+	<p class="info">Copyright Joona Kytöniemi 2020. Last edited: 2020-09-09 11.57 pm</p>
+	<p class="info">Please refrain from reading the source "code" of this site. It's a mess.</p>
 </div>
 </body>
 
