block style menu for mobile and unfixed footer*
*meaning it's not fixed to the bottom anymore funny 100

--- a/index.html
+++ b/index.html
@@ -26,10 +26,11 @@
 <div class="content" id="post0">
 	<h1 class="headline">Welcome to my web page.</h1>
 	<p class="bodytext">Still under construction. Do come back at a later date.<br>(or don't, I don't mind)</p>
-	<p class="bodytext">The font used in this web page doesn't seem to work on<br>mobile devices. This will be fixed soon</p>
+	<p class="bodytext">The font used in this web page doesn't seem to work on<br>mobile devices. This will be fixed soon(-ish)</p>
 	<br>
 	<img class="postimg" src="le_funny_maymay.jpg" alt="wholesome 100 reddit 100 keanu 100 chungus 100" width="300" height="300">
 </div>
+<br><br><br><br>
 <div class="footer">
 	<p class="info">Copyright Joona Kytöniemi 2020. Last edited: 2020-09-09 11.57 pm</p>
 	<p class="info">Please refrain from reading the source "code" of this site. It's a mess.</p>
