changed breakpoint, added div for filler, an attempt to fixing font on mobile etc

--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
+	<link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@1,300&display=swap" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="common.css">
+	
 	<title>Under construction by Joona</title>
 	<meta charset="UTF-8">
 	<meta name="description" content="The official home page of Kytis">
 	<meta name="keywords" content="No valuable content">
 	<meta name="author" content="Joona Kytöniemi 2020">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	
-	<link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@1,300&display=swap" rel="stylesheet"> 
-	<link rel="stylesheet" type="text/css" href="common.css">
 </head>
 <body>
 <div class="header">
@@ -23,6 +23,7 @@
 		<li id="cat3" class="nav_item"><a href="placeholder.html">HOLCEPLADER</a></li>
 	</ul>
 </div><br>
+<div class="filler"></div>
 <div class="content" id="post0">
 	<h1 class="headline">Welcome to my web page.</h1>
 	<p class="bodytext">Still under construction. Do come back at a later date.<br>(or don't, I don't mind)</p>
@@ -32,9 +33,8 @@
 </div>
 <br><br><br><br>
 <div class="footer">
-	<p class="info">Copyright Joona Kytöniemi 2020. Last edited: 2020-09-09 11.57 pm</p>
+	<p class="info">Copyright Joona Kytöniemi 2020. Last edited: 2020-09-12 15.36 pm</p>
 	<p class="info">Please refrain from reading the source "code" of this site. It's a mess.</p>
 </div>
 </body>
-
 </html>
