added snarky comments to index and also no caching tags

--- a/index.html
+++ b/index.html
@@ -1,17 +1,26 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
+	<!-- google font and stylesheet -->
 	<link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@1,300&display=swap" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="common.css">
 	
+	<!-- common meta for web page -->
 	<title>Under construction by Joona</title>
 	<meta charset="UTF-8">
 	<meta name="description" content="The official home page of Kytis">
 	<meta name="keywords" content="No valuable content">
 	<meta name="author" content="Joona Kytöniemi 2020">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	
+	<!-- "do not cache this web page, this is for me -->
+	<meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+	<meta http-equiv="Pragma" content="no-cache">
+	<meta http-equiv="Expires" content="0">
 </head>
 <body>
+
+<!-- home button and navbar -->
 <div class="header">
 	<ul class="home">
 		<li id="cat0" class="home_btn"><a href="index.html">KYTONIEMI.TECH</a></li>
@@ -23,7 +32,11 @@
 		<li id="cat3" class="nav_item"><a href="placeholder.html">HOLCEPLADER</a></li>
 	</ul>
 </div><br>
+
+<!-- this div is just filler as it says -->
 <div class="filler"></div>
+
+<!-- div for actual content, i plan to just copy paste these but change the id -->
 <div class="content" id="post0">
 	<h1 class="headline">Welcome to my web page.</h1>
 	<p class="bodytext">Still under construction. Do come back at a later date.<br>(or don't, I don't mind)</p>
@@ -31,10 +44,16 @@
 	<br>
 	<img class="postimg" src="le_funny_maymay.jpg" alt="wholesome 100 reddit 100 keanu 100 chungus 100" width="300" height="300">
 </div>
+
+<!-- another filler div in here, maybe?? just use line breaks for now -->
 <br><br><br><br>
+
+<!-- footer for author info etc -->
 <div class="footer">
 	<p class="info">Copyright Joona Kytöniemi 2020. Last edited: 2020-09-12 15.36 pm</p>
 	<p class="info">Please refrain from reading the source "code" of this site. It's a mess.</p>
 </div>
+
+<!-- you still reading this? damn go do something productive -->
 </body>
 </html>
