--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="common.css">
 	
 	<!-- common meta for web page -->
-	<title>Under construction by Joona</title>
+	<title>WIP - jnkyto's website</title>
 	<meta charset="UTF-8">
 	<meta name="description" content="The official home page of Kytis">
 	<meta name="keywords" content="No valuable content">
