added lang tag and changed filler height

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<!-- google font and stylesheet -->
 	<link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@1,300&display=swap" rel="stylesheet">
@@ -23,7 +23,7 @@
 <!-- home button and navbar -->
 <div class="header">
 	<ul class="home">
-		<li id="cat0" class="home_btn"><a href="index.html">KYTONIEMI.TECH</a></li>
+		<li class="home_btn"><a href="index.html">KYTONIEMI.TECH</a></li>
 	</ul>
 	<ul class="nav0">
 		<li id="cat0" class="nav_item"><a href="placeholder.html">PLACEHOLDER</a></li>
