--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<!-- google font and stylesheet -->
-	<link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital@1&display=swap" rel="stylesheet"> 
+	<link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital@1&display=swap" rel="stylesheet"> 
 	<link rel="stylesheet" type="text/css" href="common.css">
 	
 	<!-- common meta for web page -->
@@ -39,14 +39,14 @@
 <!-- div for actual content, i plan to just copy paste these but change the id -->
 <div class="content" id="post0">
 	<h1 class="headline">Welcome to my web page.</h1>
-	<p class="bodytext">Still under construction. Do come back at a later date.<br>(or don't, I don't mind)</p>
-	<p class="bodytext">The font used in this web page doesn't seem to work on<br>mobile devices. This will be fixed soon(-ish)</p>
+	<p class="bodytext">Still under construction.<br>Do come back at a later date.<br>(or don't, I don't mind)</p>
+	<p class="bodytext">The font used in this web page<br>doesn't seem to work on<br>mobile devices. This will be fixed soon(-ish)</p>
 	<br>
 	<img class="postimg" src="le_funny_maymay.jpg" alt="wholesome 100 reddit 100 keanu 100 chungus 100" width="300" height="300">
 </div>
 
 <!-- another filler div in here, maybe?? just use line breaks for now -->
-<br><br><br><br>
+<br><br><br><br><br><br>
 
 <!-- footer for author info etc -->
 <div class="footer">
