--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
 <!-- footer for author info etc -->
 <div class="footer">
-	<p class="info">Copyright Joona Kytöniemi 2020. Last edited: 2020-09-12 15.36 pm</p>
+	<p class="info">Copyright Joona Kytöniemi 2020. Last edited: 2020-09-16 0944hrs</p>
 	<p class="info">Please refrain from reading the source "code" of this site. It's a mess.</p>
 </div>
 
