--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <div class="content" id="post0">
 	<h1 class="headline">Welcome to my web page.</h1>
 	<p class="bodytext">Still under construction.<br>Do come back at a later date.<br>(or don't, I don't mind)</p>
-	<p class="bodytext">The font used in this web page<br>doesn't seem to work on<br>mobile devices. This will be fixed soon(-ish)</p>
+	<p class="bodytext">The font seems to work on<br>mobile now. One problem solved.<br>Only 100 more to go.</p>
 	<br>
 	<img class="postimg" src="le_funny_maymay.jpg" alt="wholesome 100 reddit 100 keanu 100 chungus 100" width="300" height="300">
 </div>
