added .html extensions back. im not stupid they worked fine offline

--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
 		<li id="active" class="home_btn"><a href="index.html">KYTONIEMI.TECH</a></li>
 	</ul>
 	<ul class="nav0">
-		<li id="inactive" class="nav_item"><a href="music">/MUSIC/</a></li>
-		<li id="inactive" class="nav_item"><a href="placeholder">PLACEHOLDER</a></li>
-		<li id="inactive" class="nav_item"><a href="placeholder">HOLDPLACER</a></li>
-		<li id="inactive" class="nav_item"><a href="placeholder">PLALDHOCER</a></li>
+		<li id="inactive" class="nav_item"><a href="music.html">/MUSIC/</a></li>
+		<li id="inactive" class="nav_item"><a href="placeholder.html">PLACEHOLDER</a></li>
+		<li id="inactive" class="nav_item"><a href="placeholder.html">HOLDPLACER</a></li>
+		<li id="inactive" class="nav_item"><a href="placeholder.html">PLALDHOCER</a></li>
 	</ul>
 </div><br>
 
