minor edit, removed a dot

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
 <!-- div for actual content, i plan to just copy paste these but change the id -->
 <div class="content" id="post0">
-	<h1 class="headline">Welcome to my web page.</h1>
+	<h1 class="headline">Welcome to my web page</h1>
 	<p class="bodytext">Still under construction.<br>Do come back at a later date.<br>(or don't, I don't mind)</p>
 	<p class="bodytext">The font seems to work on<br>mobile now. One problem solved.<br>Only 100 more to go.</p>
 	<br>
