font changes and update index

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
 	<!-- google font and stylesheet -->
-	<link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital@1&display=swap" rel="stylesheet"> 
+	<link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital@1&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet"> 
 	<link rel="stylesheet" type="text/css" href="css/common.css">
 	
 	<!-- cookie message box (not used atm, probably never will) -->
@@ -52,7 +53,7 @@
 <div class="content" id="post0">
 	<h1 class="headline">Welcome to my web page</h1>
 	<p class="bodytext">Still under construction.<br>Do come back at a later date.<br>(or don't, I don't mind)</p>
-	<p class="bodytext">The font seems to work on<br>mobile now. One problem solved.<br>Only 100 more to go.</p>
+	<p class="bodytext">This website will most likely<br>serve as a hub for projects of mine.<br>I've no projects to show at this time.<br>:p</p>
 	<br>
 	<img class="postimg" src="le_funny_maymay.jpg" alt="wholesome 100 reddit 100 keanu 100 chungus 100" width="480" height="525">
 </div>
@@ -62,7 +63,7 @@
 
 <!-- footer for author info etc -->
 <div class="footer">
-	<p class="info">Copyright Joona Kytöniemi 2020. Last edited: 2020-09-17 1708hrs</p>
+	<p class="info">Copyright Joona Kytöniemi 2020. Last edited: 2020-10-09 1748hrs</p>
 	<p class="info">Please refrain from reading the source "code" of this site. It's a mess.</p>
 </div>
 
