added backlind to placeholder, minor adjustments to index

--- a/placeholder.html
+++ b/placeholder.html
@@ -13,6 +13,7 @@
 </head>
 <body>
 <h1 class="headline">Coming soon</h1>
+<li id="back"><a href="index.html">BACK TO INDEX</a></li>
 </body>
 </head>
 </html>
