git makes me feel good

--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
 	<!-- google font and stylesheet -->
 	<link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital@1&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet"> 
+	<link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet"> 
 	<link rel="stylesheet" type="text/css" href="css/common.css">
 	
-	<!-- cookie message box (not used atm, probably never will) -->
+	<!-- how2 hide cookie box -->
 	<script>
 		function hideOnClick() {
 			var x = document.getElementById("cookies");
@@ -51,7 +51,7 @@
 
 <!-- div for actual content, i plan to just copy paste these but change the id -->
 <div class="content" id="post0">
-	<h1 class="headline">Welcome to my web page</h1>
+	<h1 class="headline">Welcome to my web page.</h1>
 	<p class="bodytext">Still under construction.<br>Do come back at a later date.<br>(or don't, I don't mind)</p>
 	<p class="bodytext">This website will most likely<br>serve as a hub for projects of mine.<br>I've no projects to show at this time.<br>:p</p>
 	<br>
@@ -63,14 +63,13 @@
 
 <!-- footer for author info etc -->
 <div class="footer">
-	<p class="info">Copyright Joona Kytöniemi 2020. Last edited: 2020-10-09 1748hrs</p>
+	<p class="info">Copyright Joona Kytöniemi 2020. Last edited: 2021-01-18 1750hrs</p>
 	<p class="info">Please refrain from reading the source "code" of this site. It's a mess.</p>
 </div>
 
 <div id="cookies">
-	<p>By visiting the /music/ tab, you agree to the <a href="https://soundcloud.com/pages/cookies">cookie policy</a> of Soundcloud. If you do not wish to agree, do not visit the tab. Thank you.</p>
-	<button onclick="hideOnClick()">OK</button>
-	<p>This box will always show up on reload, because I haven't used any cookies :)</p>
+	<p>By visiting the /music/ tab, you agree to the <a href="https://soundcloud.com/pages/cookies">cookie policy</a><button onclick="hideOnClick()">OK</button> of Soundcloud. If you do not wish to agree, do not visit the tab. Thank you.</p>
+	<!-- <p>This box will always show up on reload, because I haven't used any cookies :)</p> -->
 </div>
 
 <!-- you still reading this? damn go do something productive -->
