--- a/music.html
+++ b/music.html
@@ -28,9 +28,7 @@
 	</ul>
 	<ul class="nav0">
 		<li id="active" class="nav_item"><a href="music.html">/MUSIC/</a></li>
-		<li id="inactive" class="nav_item"><a href="placeholder.html">PLACEHOLDER</a></li>
-		<li id="inactive" class="nav_item"><a href="placeholder.html">HOLDPLACER</a></li>
-		<li id="inactive" class="nav_item"><a href="placeholder.html">PLALDHOCER</a></li>
+		<li id="inactive" class="nav_item"><a href="projects.html">/PROJECTS/</a></li>
 	</ul>
 </div><br>
 
@@ -52,8 +50,8 @@
 
 <!-- footer for author info etc -->
 <div class="footer">
-	<p class="info">Copyright Joona Kytöniemi 2020. Last edited: 2020-09-17 1708hrs</p>
-	<p class="info">Please refrain from reading the source "code" of this site. It's a mess.</p>
+	<p class="info">Joona Kytöniemi 2021. Last edited: 2021-05-30 1950hrs</p>
+	<p class="info">Contact: kjoona<span>@</span>outlook.com</p>
 </div>
 
 </body>
