--- a/projects.html
+++ b/projects.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
 	<!-- google font and stylesheet -->
@@ -31,11 +31,11 @@
 <!-- home button and navbar -->
 <div class="header">
 	<ul class="home">
-		<li id="active" class="home_btn"><a href="index.html">KYTONIEMI.TECH</a></li>
+		<li id="inactive" class="home_btn"><a href="index.html">KYTONIEMI.TECH</a></li>
 	</ul>
-	<ul class="nav0" id="headnav">
+	<ul class="nav0">
 		<li id="inactive" class="nav_item"><a href="music.html">/MUSIC/</a></li>
-		<li id="inactive" class="nav_item"><a href="projects.html">/PROJECTS/</a></li>
+		<li id="active" class="nav_item"><a href="projects.html">/PROJECTS/</a></li>
 	</ul>
 </div><br>
 
@@ -44,11 +44,15 @@
 
 <!-- div for actual content, i plan to just copy paste these but change the id -->
 <div class="content" id="post0">
-	<h1 class="headline">Welcome to my web page.</h1>
-	<p class="bodytext">Still under construction.<br>Do come back at a later date.<br>(or don't, I don't mind)</p>
-	<p class="bodytext">This website will soon(-ish) be<br>replaced and the domain<br>will change at that point too.<br>:p</p>
-	<br>
-	<img class="postimg" src="le_funny_maymay.jpg" alt="wholesome 100 reddit 100 keanu 100 chungus 100" width="480" height="525">
+	<h1 class="headline">EpstoriClient</h1>
+    <a href="https://github.com/jnkyto/EpstoriClient"><img class="postimg" src="epsclient.jpg" alt="EpstoriClient logo" width="20%" height="20%"></a>
+	<p class="bodytext">EpstoriClient is a utility mod for Minecraft 1.16.5.
+        <br>It features client-side commands for changing<br>brightness and fov beyond the limits of game settings.
+        <br>Discord Rich Presence is also built-in,<br>which can be toggled on or off.</p>
+	<p class="bodytext">At this time the mod does not provide<br>any "illegal" in-game advantages. However, 
+        <br>because this mod is aimed at anarchy servers,<br>those kind of features will probably be implemented.</p>
+    <p class="bodytext">EpstoriClient is open source, currently licenced under CC0-1.0.
+        <br>More info on <a href="https://github.com/jnkyto/EpstoriClient">GitHub.com</a></p>
 </div>
 
 <!-- another filler div in here, maybe?? just use line breaks for now -->
@@ -56,13 +60,8 @@
 
 <!-- footer for author info etc -->
 <div class="footer">
-	<p class="info">Joona Kytöniemi 2021. Last edited: 2021-05-30 1920hrs</p>
+	<p class="info">Joona Kytöniemi 2021. Last edited: 2021-05-30 1945hrs</p>
 	<p class="info">Contact: kjoona<span>@</span>outlook.com</p>
-</div>
-
-<div id="cookies">
-	<p>By visiting the /music/ tab, you agree to the <a href="https://soundcloud.com/pages/cookies">cookie policy</a><button onclick="hideOnClick()">OK</button> of Soundcloud. If you do not wish to agree, do not visit the tab. Thank you.</p>
-	<!-- <p>This box will always show up on reload, because I haven't used any cookies :)</p> -->
 </div>
 
 <!-- you still reading this? damn go do something productive -->
