--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	<title>kytoniemi.tech - Joona Kytöniemi</title>
 	<meta charset="UTF-8">
 	<meta name="description" content="The official home page of Kytis">
-	<meta name="keywords" content="No valuable content">
+	<meta name="keywords" content="joona, kytöniemi, kytoniemi, diplomi-insinööri, opiskelija, tietotekniikka, elektroniikka, engineer, student, turku, seinäjoki">
 	<meta name="author" content="Joona Kytöniemi 2021">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
@@ -48,7 +48,9 @@
 	<p class="bodytext">Still under construction.<br>Do come back at a later date.<br>(or don't, I don't mind)</p>
 	<p class="bodytext">This website will soon(-ish) be<br>replaced and the domain<br>will change at that point too.<br>:p</p>
 	<br>
-	<img class="postimg" src="le_funny_maymay.jpg" alt="wholesome 100 reddit 100 keanu 100 chungus 100" width="480" height="525">
+	<img class="postimg" src="img/le_funny_maymay.jpg" alt="Twitter screenshot from Catalin Pit. Transcription: &quot People: what is your job? Me: I'm a software engineer. 
+	People: Oh, nice job. You're smart. I wish I could do that too, but I'm not smart enough. Me on Google: How do I import my CSS file into HTML? How do I center the 
+	FB icon on my webpage?&quot" width="480" height="525">
 </div>
 
 <!-- another filler div in here, maybe?? just use line breaks for now -->
