--- a/projects.html
+++ b/projects.html
@@ -19,7 +19,7 @@
 } 
 	</script>
 	<!-- common meta for web page -->
-	<title>kytoniemi.tech - Joona Kytöniemi</title>
+	<title>kytoniemi.tech - Projects</title>
 	<meta charset="UTF-8">
 	<meta name="description" content="The official home page of Kytis">
 	<meta name="keywords" content="No valuable content">
@@ -41,26 +41,20 @@
 
 <!-- this div is just filler as it says -->
 <div class="filler"></div>
+<br><br><br><br><br><br>
 
 <!-- div for actual content, i plan to just copy paste these but change the id -->
 <div class="content" id="post0">
-	<h1 class="headline">EpstoriClient</h1>
-    <a href="https://github.com/jnkyto/EpstoriClient"><img class="postimg" src="epsclient.jpg" alt="EpstoriClient logo" width="20%" height="20%"></a>
-	<p class="bodytext">EpstoriClient is a utility mod for Minecraft 1.16.5.
-        <br>It features client-side commands for changing<br>brightness and fov beyond the limits of game settings.
-        <br>Discord Rich Presence is also built-in,<br>which can be toggled on or off.</p>
-	<p class="bodytext">At this time the mod does not provide<br>any "illegal" in-game advantages. However, 
-        <br>because this mod is aimed at anarchy servers,<br>those kind of features will probably be implemented.</p>
-    <p class="bodytext">EpstoriClient is open source, currently licenced under CC0-1.0.
-        <br>More info on <a href="https://github.com/jnkyto/EpstoriClient">GitHub.com</a></p>
+	<h1 class="headline">Check back soon!</h1>
+	<a href="https://github.com/jnkyto"><p class="bodytext">https://github.com/jnkyto</p></a>
 </div>
 
 <!-- another filler div in here, maybe?? just use line breaks for now -->
-<br><br>
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
 <!-- footer for author info etc -->
 <div class="footer">
-	<p class="info">Joona Kytöniemi 2021. Last edited: 2021-05-30 1945hrs</p>
+	<p class="info">Joona Kytöniemi 2021. Last edited: 2021-06-07 0056hrs</p>
 	<p class="info">Contact: kjoona<span>@</span>outlook.com</p>
 </div>
 
